Manual revert of "Preload scan external css for @import"

This reverts commit c190209f6c72a0cf95307b42079b843c10f03ff9 [formerly c3698d693def17f7f4c2d17f462de63ee06fe10d].
https://codereview.chromium.org/1819593002

It was causing some crashes / layout test flakiness

TBR=kinuko@chromium.org,kouhei@chromium.org

BUG=608577,608310

Review-Url: https://codereview.chromium.org/1947053002
Cr-Commit-Position: refs/heads/master@{#391506}

Former-commit-id: 3ac78e618532b15d8d26af86808f1028f4d62242