third_party/WebKit/Source/core/fetch/CSSStyleSheetResource.h
@@ -55,8 +55,6 @@ public:
     StyleSheetContents* restoreParsedStyleSheet(const CSSParserContext&);
     void saveParsedStyleSheet(StyleSheetContents*);
 
-    void appendData(const char* data, size_t length) override;
-
 protected:
     bool isSafeToUnlock() const override;
     void destroyDecodedDataIfPossible() override;
@@ -82,8 +80,6 @@ private:
     String m_decodedSheetText;
 
     Member<StyleSheetContents> m_parsedStyleSheetCache;
-
-    bool m_didNotifyFirstData;
 };
 
 DEFINE_RESOURCE_TYPE_CASTS(CSSStyleSheet);
