third_party/WebKit/Source/core/html/parser/HTMLPreloadScanner.cpp
@@ -45,7 +45,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/html/parser/HTMLParserIdioms.h"
 #include "core/html/parser/HTMLSrcsetParser.h"
 #include "core/html/parser/HTMLTokenizer.h"
-#include "core/html/parser/ResourcePreloader.h"
 #include "core/loader/LinkLoader.h"
 #include "platform/ContentType.h"
 #include "platform/Histogram.h"
